--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="content">
               <h3>Our Vision</h3>
               <p>
-                We've experienced traditional college consultants ourselves: we thus know they're not worth anyone's time or money. Who would you trust more - a counselor with no in-field knowledge of the admissions world, or a peer who only recently went through the process? Good advice-always free.
+                We've experienced traditional college consultants and disconnected resources on the internet ourselves: advice so vague and sometimes even misleading that it offers no benefit to the average applicant. Our mission is simple: To provide a central repository of good advice-always free.
               </p>
               <a href="#features" class="about-btn">Features <i class="bx bx-chevron-right"></i></a>
             </div>
@@ -109,7 +109,7 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-images"></i>
                   <h4>No Sugarcoating</h4>
-                  <p>College consulting companies tend to oversell some parts of the application that they have special services for - to ensure that you’re trapped in their web of spending money. We don’t do that, and give you the brutal honest truth and ways you can feasibly improve your application.</p>
+                  <p>We give you raw, unfiltered takes on your application and your writing - to help put things into perspective. We accompany this with concrete advice as to how to improve it: to get to the future of your dreams. </p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-shield"></i>
@@ -219,7 +219,7 @@
               If you have previosuly consulted admissions counsellors, you know what we are referring to. We bring to you personally-tailored, non-packaged services to your disposal.
             </p>
             <p>
-              When you only need help with a specific part of your application but the counsellors are willing to do nothing less than a $2000 admissions package, it gets frustrating
+              When you only need help with a specific part of your application but the counsellors are willing to do nothing less than a $2000 admissions package, it gets frustrating.
               To handle this specific problem, any of our services can be used in their entirety or in combination as per the need of the student.
             </p>
           </div>
@@ -230,12 +230,12 @@
             <img src="assets/img/features-3.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5" data-aos="fade-left">
-            <h3>All our counsellors have taken on the college admissions process within the last 1-2 years.</h3>
+            <h3>All your peers have taken on the college admissions process within the last 1-2 years.</h3>
             <p>Does the thought of listening to a middle-aged counselor shell out entirely irrelevant advice excite you? If not(we hope not!), let your peers help you out. </p>
             <ul>
               <li><i class="icofont-check"></i> Relatable and Friendly Counselors</li>
               <li><i class="icofont-check"></i> Up-to-date knowledge and guidance</li>
-              <li><i class="icofont-check"></i> People who actually listen to your wants and needs.</li>
+              <li><i class="icofont-check"></i> People who actually listen to and understand your wants and needs.</li>
             </ul>
           </div>
         </div>
@@ -254,7 +254,7 @@
           <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="100">
             <span>01</span>
             <h4>Peer to Peer</h4>
-            <p>Learn from and Teach people like you in an ever-evolving community of ambitious students.</p>
+            <p>Interact with people like you in an ever-evolving community of ambitious students.</p>
           </div>
 
           <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="200">
@@ -284,7 +284,7 @@
           <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="300">
             <span>06</span>
             <h4>Testing Tips</h4>
-            <p>Standardised Testing is a vital part of an applciation. Implement the strategies that worked for our top-scorers(all of our counsellors) and see the results!</p>
+            <p>Standardised Testing is a vital part of an applciation. Implement the strategies that worked for our top-scorers and see the results!</p>
           </div>
 
         </div>
@@ -322,7 +322,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4 class="title"><a href="">Profile Review</a></h4>
-              <p class="description">Pro Bono profile reviews to ensure that you tick all the boxes and don't miss anything in terms of standardised testing, CSS profiles, etc.</p>
+              <p class="description">Pro-Bono profile reviews to ensure that you present your truest and most impressive-self to colleges.  </p>
             </div>
           </div>
 
@@ -483,7 +483,7 @@
             <a data-toggle="collapse" class="" href="#faq1">Why Us?<i class="icofont-simple-up"></i></a>
             <div id="faq1" class="collapse show" data-parent=".faq-list">
               <p>
-                It's pretty simple. College consultancies charge outrageous amounts of money: ranging from a minimum of 1 lakh INR in India, to more than 5000 USD a year in the United States- with schemes in place to extract even more money. We don’t do that. We’re just students giving you honest advice for free on our YouTube channel and blog. We did the research ourself in our time, scouring the internet and talking to students, and we want to make the process easier for you!
+                It's pretty simple. College consultancies charge outrageous amounts of money: ranging from a minimum of 1 lakh INR in India, to more than 5000 USD a year in the United States-these prices obviously deter many from even applying! We want to ensure everyone has the opportunity to purseu their dreams. We’re students giving you honest advice for free on our YouTube channel and blog. We did the research ourself in our time, scouring the internet and talking to students, and we want to make the process easier for you!
               </p>
             </div>
           </li>
@@ -503,10 +503,10 @@
             <a data-toggle="collapse" href="#faq3" class="collapsed">Why can’t I do it myself? What is your angle here? <i class="icofont-simple-up"></i></a>
             <div id="faq3" class="collapse" data-parent=".faq-list">
               <p>
-                You CAN do it yourself. That is what we want to help you with. All our content will be free, forever on our youtube channel and blog, and you can extract all the value you want without paying a DIME. We only ask you to share it with others if you find it helpful. We make most of our revenue through ads, only enough to keep us running, and to keep you bringing new and better content.
+                You CAN do it yourself-we just want to make the research process less taxing! All our content will be free, forever on our youtube channel and blog, and you can extract all the value you want without paying a DIME. We only ask you to share it with others if you find it helpful. We plan to make most of our revenue through ads, only enough to keep us running, and to keep you bringing new and better content.
 
 
-If you have particularly unique situation, and/or want to get personalised feedback or guidance from one of our team members, we charge a nominal fee, as we cannot service all requests. However, we will only take your case and charge you if we feel that our videos cannot help you with your situation, else, we’ll just redirect you to the appropriate resources without charging you anything.
+If you have a particularly unique situation, and/or want to get personalised feedback or guidance from one of our team members, we plan to charge a nominal fee, as we cannot service all requests. However, we will only take your case and charge you if we feel that our videos cannot help you with your situation, else, we’ll just redirect you to the appropriate resources without charging you anything.
               </p>
             </div>
           </li>
@@ -515,10 +515,11 @@ If you have particularly unique situation, and/or want to get personalised feedb
             <a data-toggle="collapse" href="#faq4" class="collapsed">This is all great, but studying in the abroad is only for the rich, and I'm just a middle-class kid <i class="icofont-simple-up"></i></a>
             <div id="faq4" class="collapse" data-parent=".faq-list">
               <p>
-                Incredibly false! Most of our team has either won hefty scholarships and full-rides (a term which indicates that the university takes care of every single expense you could have), or is taking out easily-paid-back loans to fund their education.
+                Incredibly false! Most of our team is paying amounts their families can afford, ranging from 5-50% of the cost of attendance, or is taking out easily-paid-back loans to fund their education.
+                
+             Moreover, we have minimized costs to even apply, and want to help you do that as well! Studying abroad can be made accessible to all regardless of income, and we want to make that happen.
 
 
-This is a wrong notion that is brought about by college counsellors to scare you into either not pursuing your dream, or paying them money to help you get into a cheaper university elsewhere, earning a quick commission off of your admission.
               </p>
             </div>
           </li>
@@ -534,7 +535,7 @@ This is a wrong notion that is brought about by college counsellors to scare you
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Feel free to reach out to us by dropping us an email on our official email-ID in case of any queries, or potential financial aid for any of our services. We are immediate to reply and will always try to help you out.</p>
+          <p>Feel free to reach out to us by dropping us an email on our official email-ID in case of any queries. We'll get back to you soon!</p>
         </div>
 
         <div class="row">
@@ -546,7 +547,7 @@ This is a wrong notion that is brought about by college counsellors to scare you
                 <div class="info-box">
                   <i class="bx bx-map"></i>
                   <h3>Our Address</h3>
-                  <p>Bangalore, Gurgaon, Parwanoo, India</p>
+                  <p>HQ: Bannerghatta Road, Bangalore</p>
                 </div>
               </div>
               <div class="col-md-6">
