--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <ul>
               <li><i class="icofont-check"></i> Free Videos </li>
               <li><i class="icofont-check"></i> High-Quality Blogs</li>
-              <li><i class="icofont-check"></i> Inexpensive Personal Advice </li>
+              <li><i class="icofont-check"></i> Comprehensive Personal Advice </li>
             </ul>
           </div>
         </div>
